@@ -5,6 +5,8 @@
 	(set_exception_parameter_decl): New macro.
 	* gcc-interface/trans.c (gigi): Initialize set_exception_parameter_decl.
 	(Exception_Handler_to_gnu_zcx): Initialize the choice parameter.
+	* gcc-interface/trans.c: Synchronize declarations of other/all others
+	between gigi and the runtime.
 
 2013-10-14  Robert Dewar  <dewar@adacore.com>
 
